--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -74,5 +74,11 @@
         android:layout_height="wrap_content"
         android:text="TextView"
         android:textSize="20sp" />
+    <Button
+        android:id="@+id/btnThoat"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Thoat" />
+
 
 </LinearLayout>
